--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
     </p>
     
     <input type="button" id="clear_canvas" value="Clean" onclick="clearCanvas()" />
+    &nbsp; &nbsp;
+    
+    <a id="download" download="myImage.jpg" href="" onclick="download_img(this);"><button type="button">Download</button></a>    
+
     </div>
 <br>
 <br>
