--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -46,7 +44,9 @@
     &nbsp; &nbsp;
     Brush size
     <input type="range" id="myRange" min="0" max="50" value="5" oninput="resizeBrush(this.value)">
-    </p>
+    Eraser
+    <button onclick="eraser()" type="button">Eraser</button>
+</p>
     
     <p>
     Background color
@@ -59,7 +59,7 @@
     <input type="button" id="clear_canvas" value="Clean" onclick="clearCanvas()" />
     &nbsp; &nbsp;
     
-    <a id="download" download="myImage.jpg" href="" onclick="download_img(this);"><button type="button">Download</button></a>    
+    <a id="download" download="myImage.jpg" href="" onclick="download_img(this);"><input type="button" value="Download"></a>    
 
     </div>
 <br>
