--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
     &nbsp; &nbsp;
     Brush size
     <input type="range" id="myRange" min="0" max="50" value="5" oninput="resizeBrush(this.value)">
+    &nbsp; &nbsp;
     Eraser
-    <button onclick="eraser()" type="button">Eraser</button>
+    <button type="button" onclick="eraser()" >Eraser</button>
 </p>
     
     <p>
