--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     
-    <section id="selectME">Dress me with colors to make me beautiful! CLICK to select me!</section>
+    <section id="selectME">Dress me with colors to make me beautiful!</section>
 
     <!-- if want infinite scrolling banner for all images use this https://jsfiddle.net/sergdenisov/wb28eeh2/3/ -->
     
